// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textEmphasis renders 0 1`] = `
Array [
  .c0 {
  text-emphasis: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders function 1`] = `
Array [
  .c0 {
  text-emphasis: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders invalid theme path 1`] = `
Array [
  .c0 {
  text-emphasis: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders negative number 1`] = `
Array [
  .c0 {
  text-emphasis: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-emphasis: July;
  }
}

@media April {
  .c0 {
    text-emphasis: August;
  }
}

@media January {
  .c0 {
    text-emphasis: September;
  }
}

@media April {
  .c0 {
    text-emphasis: November;
  }
}

@media June {
  .c0 {
    text-emphasis: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-emphasis: July;
  }
}

@media April {
  .c0 {
    text-emphasis: August;
  }
}

@media January {
  .c0 {
    text-emphasis: September;
  }
}

@media April {
  .c0 {
    text-emphasis: November;
  }
}

@media June {
  .c0 {
    text-emphasis: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis: January;
  }
}

@media April {
  .c0 {
    text-emphasis: December;
  }
}

@media January {
  .c0 {
    text-emphasis: April;
  }
}

@media April {
  .c0 {
    text-emphasis: May;
  }
}

@media June {
  .c0 {
    text-emphasis: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis: January;
  }
}

@media April {
  .c0 {
    text-emphasis: December;
  }
}

@media January {
  .c0 {
    text-emphasis: April;
  }
}

@media April {
  .c0 {
    text-emphasis: May;
  }
}

@media June {
  .c0 {
    text-emphasis: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders postitive number 1`] = `
Array [
  .c0 {
  text-emphasis: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders string 1`] = `
Array [
  .c0 {
  text-emphasis: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasis renders valid theme path 1`] = `
Array [
  .c0 {
  text-emphasis: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
